--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Pillow
 cython==0.29.24
 matplotlib
 scikit-image==0.16.2
-tensorflow==2.2.0
+tensorflow-gpu==2.2.0
 keras==2.3.1
 opencv-python==4.5.4.60
 h5py==2.10.0
