--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ Pillow
 cython
 matplotlib
 scikit-image
-tensorflow==2.2.0
-keras==2.3.1
+tensorflow>=2.2.0
 opencv-python
-h5py==2.10.0
+h5py
 imgaug
 IPython[all]
