--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ scipy
 Pillow
 cython
 matplotlib
-scikit-image
-tensorflow==2.3.1
+scikit-image==0.16.2
+tensorflow==2.7.0
+keras==2.7.0
 opencv-python
-h5py
+h5py==2.10.0
 imgaug
 IPython[all]
